update-changes-trial

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assests/profile-pic.png" alt="John Doe Profile Picture" />
+        <img
+          src="./assests/Resmi Foto.jpeg"
+          alt="John Doe Profile Picture"
+          class="image-rounder"
+        />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello I am</p>
@@ -260,7 +264,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assests/project-1.png"
+                src="./assests/uber map.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -284,7 +288,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assests/project-2.png"
+                src="./assests/image.png"
                 alt="Project 1"
                 class="project-img"
               />
