--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assests/about-pic.png"
+            src="./assests/logo.png"
             alt="Profile picture"
             class="about-pic"
           />
@@ -96,7 +96,7 @@
               />
               <h3>Experience</h3>
               <p>
-                2+ years <br />
+                1 year <br />
                 Front End Development
               </p>
             </div>
@@ -148,7 +148,7 @@
                 />
                 <div>
                   <h3>HTML</h3>
-                  <p>Experienced</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -181,7 +181,7 @@
                 />
                 <div>
                   <h3>Vue3</h3>
-                  <p>Experienced</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
             </div>
@@ -264,12 +264,14 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assests/uber map.png"
+                src="./assests/ubermerged.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">
+              &nbsp; &nbsp; Uber &nbsp; &nbsp; Clone
+            </h2>
             <div class="btn-container">
               <button
                 class="btn-color-2 btn project-btn"
@@ -293,7 +295,9 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">
+              Netflix &nbsp; Clone
+            </h2>
             <div class="btn-container">
               <button
                 class="btn-color-2 btn project-btn"
@@ -312,12 +316,12 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assests/project-3.png"
+                src="./assests/youtube2.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Youtube Clone</h2>
             <div class="btn-container">
               <button
                 class="btn-color-2 btn project-btn"
