--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="section__pic-container">
         <img
           src="./assests/Resmi Foto.jpeg"
-          alt="John Doe Profile Picture"
+          alt="Barış Profile Picture"
           class="image-rounder"
         />
       </div>
