CV-about-fix-links

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assests/resume-example.pdf')"
+            onclick="window.open('./assests/Ahmet Barış Güzeltaş CV pdf 12.09.2024.pdf')"
           >
             Download CV
           </button>
@@ -64,13 +64,13 @@
             src="./assests/linkedin.png"
             alt="My linkedin Profile"
             class="icon"
-            onclick="location.href= 'https://linkedin.com/' "
+            onclick="location.href= 'https://www.linkedin.com/in/ahmet-bar%C4%B1%C5%9F-g%C3%BCzelta%C5%9F-bba295324/' "
           />
           <img
             src="./assests/github.png"
             alt="My Github Profile"
             class="icon"
-            onclick="location.href= 'https://github.com/' "
+            onclick="location.href= 'https://github.com/barisMarathon' "
           />
         </div>
       </div>
@@ -115,12 +115,23 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
-              totam aliquid neque facilis? Omnis iste quas sequi tempora nihil
-              esse, dolorem commodi placeat dolores quisquam consequuntur cumque
-              odit ratione vel delectus, explicabo exercitationem fuga
-              voluptatum nulla officiis voluptate minima harum quia! Sunt culpa
-              laudantium et vero temporibus, voluptatibus ducimus itaque.
+              I am Ahmet Barış Güzeltaş, a passionate Front-End Developer with a
+              deep love for building visually appealing and interactive
+              websites. With a year of hands-on experience in web development,
+              I’ve developed a strong understanding of HTML, CSS, JavaScript,
+              and Vue.js to create dynamic user interfaces.
+            </p>
+            <p>
+              My education at Sabancı University, along with my background in
+              technology, has fueled my curiosity and drive to constantly learn
+              new frameworks and tools. I enjoy solving problems, turning
+              complex challenges into seamless user experiences, and staying
+              updated with the latest trends in the tech world.
+            </p>
+            <p>
+              I believe in the power of collaboration and continuous growth, and
+              I am always excited to work on projects that challenge me and
+              expand my skill set. Let’s create something amazing together!
             </p>
           </div>
         </div>
@@ -208,7 +219,7 @@
                 />
                 <div>
                   <h3>NodeJs</h3>
-                  <p>Basic</p>
+                  <p>Basic &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
                 </div>
               </article>
               <article>
@@ -241,8 +252,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PhP</h3>
-                  <p>Basic</p>
+                  <h3>Php</h3>
+                  <p>Basic &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
                 </div>
               </article>
             </div>
@@ -261,32 +272,6 @@
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers">
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assests/ubermerged.png"
-                alt="Project 1"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">
-              &nbsp; &nbsp; Uber &nbsp; &nbsp; Clone
-            </h2>
-            <div class="btn-container">
-              <button
-                class="btn-color-2 btn project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn-color-2 btn project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
-            </div>
-          </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
@@ -338,6 +323,32 @@
             </div>
           </div>
         </div>
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img
+              src="./assests/ubermerged.png"
+              alt="Project 1"
+              class="project-img"
+            />
+          </div>
+          <h2 class="experience-sub-title project-title">
+            &nbsp; &nbsp; Uber &nbsp; &nbsp; Clone
+          </h2>
+          <div class="btn-container">
+            <button
+              class="btn-color-2 btn project-btn"
+              onclick="location.href='https://github.com/'"
+            >
+              Github
+            </button>
+            <button
+              class="btn-color-2 btn project-btn"
+              onclick="location.href='https://github.com/'"
+            >
+              Live Demo
+            </button>
+          </div>
+        </div>
       </div>
       <img
         src="./assests//arrow.png"
@@ -381,7 +392,7 @@
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experience</a></li>
-            <li><a href="#project">Project</a></li>
+            <li><a href="#projects">Project</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
