--- a/index.html
+++ b/index.html
@@ -286,13 +286,13 @@
             <div class="btn-container">
               <button
                 class="btn-color-2 btn project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/barisMarathon/netflix-clone'"
               >
                 Github
               </button>
               <button
                 class="btn-color-2 btn project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/barisMarathon/netflix-clone'"
               >
                 Live Demo
               </button>
@@ -310,13 +310,13 @@
             <div class="btn-container">
               <button
                 class="btn-color-2 btn project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/barisMarathon/youtube-clone-attempt'"
               >
                 Github
               </button>
               <button
                 class="btn-color-2 btn project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/barisMarathon/youtube-clone-attempt'"
               >
                 Live Demo
               </button>
@@ -337,13 +337,13 @@
           <div class="btn-container">
             <button
               class="btn-color-2 btn project-btn"
-              onclick="location.href='https://github.com/'"
+              onclick="location.href='https://github.com/barisMarathon/uber-clone'"
             >
               Github
             </button>
             <button
               class="btn-color-2 btn project-btn"
-              onclick="location.href='https://github.com/'"
+              onclick="location.href='https://github.com/barisMarathon/uber-clone'"
             >
               Live Demo
             </button>
